# egfx

./: .gitignore  readme.md
CONFIG/: eGFX_Config.h
CONFIG/DISPLAY_DRIVERS/LPC43XX_BuyDisplay_40/: eGFX_Driver_LPC43xx_BuyDisplay40.c
CONFIG/DISPLAY_DRIVERS/SDL/: eGFX_DisplayDriver_SDL.c  eGFX_DisplayDriver_SDL.h
CONFIG/DISPLAY_DRIVERS/STUB/: eGFX_Driver_DisplayStub.c  eGFX_Driver_DisplayStub.h
CONFIG/INPUT_DRIVERS/SDL/: eGFX_InputDriver_SDL.h
EXAMPLES/ASSETS/: GenSprites.bat
EXAMPLES/ASSETS/Sprites/: Sprites_16BPP_BGR565.h  Sprites_16BPP_GBRG3553.h  Sprites_16BPP_GRBG3553.h  Sprites_16BPP_RGB565.h  Sprites_1BPP.c  Sprites_1BPP.h  Sprites_24BPP.h  Sprites_32BPP.h  Sprites_3BPP_BGR.c  Sprites_3BPP_BGR.h  Sprites_4BPP.c  Sprites_4BPP.h  Sprites_4BPP_XBGR.c  Sprites_4BPP_XBGR.h  Sprites_8BPP.c  Sprites_8BPP.h
EXAMPLES/SDL/VisualC/: SDL.sln  eGFX.sln
EXAMPLES/SDL/VisualC/SDL/: SDL.vcxproj
EXAMPLES/SDL/VisualC/tests/eGFX/: eGFX.vcxproj  eGFX.vcxproj.filters
EXAMPLES/SDL/VisualC/tests/testgesture/: testgesture.vcxproj
EXAMPLES/SDL/test/: eGFX_Test.c
SRC/: eGFX.h  eGFX_Config.h  eGFX_Driver.h
SRC/Core/: eGFX_Animator.c  eGFX_Blit.c  eGFX_Obj.c  eGFX_PrimitiveOps.c  eGFX_StringOps.c  eGFX_StringOps.h
SRC/Drivers/Display/: eGFX_Driver_27MEM_LCD__LPC43xx.c  eGFX_Driver_27MEM_LCD__LPC43xx.h  eGFX_Driver_DisplayStub.h  eGFX_Driver_SDL.c  eGFX_Driver_SDL.h
SRC/Drivers/Input/: eGFX_InputDriverStub.c  eGFX_InputDriverStub.h
SRC/IO/Display/LPC43XX_BuyDisplay_40/: eGFX_Driver_LPC43xx_BuyDisplay40.h
SRC/IO/Display/NRF52840__NHD_1.69_160128ASC3/: eGFX_Driver_NHD-1.69-160128ASC3__NRF52840.c
SRC/Input/: eGFX_Input.c  eGFX_Input.h  eGFX_InputTypes.h
io/: eGFX_DisplayDriver_SDL.c  eGFX_DisplayDriver_SDL.h.in
src/: CMakeLists.txt  eGFX.h  eGFX_Config.h.template  eGFX_DataTypes.h  rebuild_core_assets.bat
src/Core/: eGFX_PixelOps.c
src/IO/Display/: eGFX_DisplayDriver_ImGui.cpp  eGFX_DisplayDriver_ImGui.h.in  eGFX_DisplayDriver_ImGui_opengl.cpp
src/IO/Display/NRF52840__NHD_1.69_160128ASC3/: eGFX_Driver_NHD-1.69-160128ASC3__NRF52840.h
src/IO/Display/SDL/: eGFX_DisplayDriver_SDL.c
src/todo/: eGFX..tm_todo  eGFX_StringOps__hwc.todo
srcs/Core/: eGFX_Plane.h
srcs/IO/Display/SDL/: eGFX_DisplayDriver_SDL.c
test/sdl/: CMakeLists.txt
test/sdl/build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  egfx_test_projects.sln
test/sdl/build_vs/test_64_32_32BPP/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  egfx_sdl_test_64_32_32BPP.sln  test_64_32_32BPP.vcxproj  test_64_32_32BPP.vcxproj.filters
test/sdl/build_vs/test_64_32_32BPP/egfx/: cmake_install.cmake  eGFX.vcxproj  eGFX.vcxproj.filters
test/sdl/prj/test_256_64_4BPP/src/: eGFX_Test.c
test/sdl/prj/test_451_271_8BPP_XRGB/: CMakeLists.txt
test/sdl/prj/test_451_271_8BPP_XRGB/build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  egfx_sdl_test_451_272_8BPP_XRGB222.sln  egfx_sdl_test_451_272_8BPP_XRGB222.vcxproj  egfx_sdl_test_451_272_8BPP_XRGB222.vcxproj.filters  egfx_sdl_test_64_32_32BPP.sln  egfx_sdl_test_64_32_32BPP.vcxproj
test/sdl/prj/test_451_271_8BPP_XRGB/build_vs/egfx/: cmake_install.cmake  eGFX.vcxproj  eGFX.vcxproj.filters
test/sdl/prj/test_451_271_8BPP_XRGB/src/: eGFX_DisplayDriver_SDL.h  eGFX_Test.c
test/sdl/prj/test_451_272_8BPP_XRGB/: CMakeLists.txt
test/sdl/prj/test_451_272_8BPP_XRGB/src/: Sprites_32BPP_XRGB888.c  Sprites_32BPP_XRGB888.h
test/sdl/prj/test_64_32_32BPP/: CMakeLists.txt
test/sdl/prj/test_64_32_32BPP/src/: Sprites_32BPP_XRGB888.c  Sprites_32BPP_XRGB888.h  eGFX_Config.h  eGFX_Test.c
test/sim/: CMakeLists.txt  boilerplate.cmake
test/sim/prj/test_256_64_4BPP/: CMakeLists.txt  imgui.ini
test/sim/prj/test_256_64_4BPP/src/: eGFX_DisplayDriver_ImGui.h  eGFX_Test.c
test/sim/prj/test_451_272_8BPP_XRGB222/: CMakeLists.txt  imgui.ini
test/sim/prj/test_451_272_8BPP_XRGB222/src/: eGFX_Config.h  eGFX_DisplayDriver_ImGui.h  eGFX_Test.c
test/sim/prj/test_64_32_32BPP/: CMakeLists.txt  imgui.ini
test/sim/prj/test_64_32_32BPP/src/: Sprites_32BPP.c  Sprites_32BPP.h  eGFX_DisplayDriver_ImGui.h  eGFX_Test.c
tests/sdl/prj/test_64_32_32BPP/src/: eGFX_Test.c
tools/src/lib_eGFX_Tools/: lib_eGFX_Tools.cs
